kubernetes/yaml/dj-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: oleksandrtsybulskyy/myapp:latest
        ports:
        - containerPort: 8000
