kubernetes/yaml/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "my-cert"  
spec:
  rules:
  - host: your-domain.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 443
  tls:
  - hosts:
    - team-challenge.pp.ua 
    secretName: my-tls-secret
